002-vpc/securityGroup.tf
resource "aws_security_group" "allow_http" {
  name        = "allow_http"
  description = "Allow HTTP inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_http"
  }
}

resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"
  vpc_id      = aws_vpc.main.id
  tags = {
    Name = "allow_ssh"
  }
}

resource "aws_security_group_rule" "ingress_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_ssh.id
}
resource "aws_security_group_rule" "egress_ssh" {
  type                     = "egress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = aws_security_group.allow_ssh.id
  source_security_group_id = aws_security_group.allow_ssh_from_bastion.id
}
resource "aws_security_group" "allow_ssh_from_bastion" {
  name        = "allow_ssh_from_bastion"
  description = "Allow SSH inbound traffic from bastion"
  vpc_id      = aws_vpc.main.id
  tags = {
    Name = "allow_ssh_from_bastion"
  }
}
resource "aws_security_group_rule" "ingress_ssh_from_bastion" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = aws_security_group.allow_ssh_from_bastion.id
  source_security_group_id = aws_security_group.allow_ssh.id
}
